fixed commissions problem on mobile veiw

--- a/src/Pages/commission/my-carousels/onecarousel.css
+++ b/src/Pages/commission/my-carousels/onecarousel.css
@@ -39,7 +39,13 @@
 
     .slick-dots li button:before {
         font-size: 6px;
-        /* Further adjust dot size */
+        
+    }
+    .image-slide-container > img {
+        width: 100%;
+        height: 50vh;
+        object-fit: contain;
+        object-position: center;
     }
 }
 
